# tppss

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-cli.txt  requirements.txt  ruff.toml  setup.py
.github/workflows/: publish.yml
samples/: calc.py  transform.ps1  transform_bdalti.ps1  transform_srtm.ps1
src/tppss/: __init__.py  cli.py  horizon.py  horizon_numba.py  render.py  sunpos.py  tppss.py
tppss/: __init__.py  cli.py  horizon.py  sunpos.py  tppss.py
