
[project]
name = "tppss"
dynamic = ["version"]
description = "Compute sunrise / sunset times taking into account local topography"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Guilhem Vellut", email = "guilhem.vellut@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["sunrise", "dem", "horizon"]
dependencies = [
    "numpy>=2",
    "python-dateutil>=2",
    "pyproj>=3",
    "rasterio>=1",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
cli = ["click>=8", "colorama"]
s3 = ["boto3"]
gcs = ["google-auth"]
azure = ["azure-storage-blob"]

[project.urls]
homepage = "https://github.com/gvellut/tppss"
source = "https://github.com/gvellut/tppss"
issues = "https://github.com/gvellut/tppss/issues"

[project.scripts]
tppss = "tppss.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/tppss/__init__.py"
